--- a/Meus codigos/index.html
+++ b/Meus codigos/index.html
@@ -7,9 +7,18 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title></title>Frontend Mentor | QR code component</title>
+    <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
+    <main>
+        <div class="fundo"> 
+            <img class="code" src="image-qr-code.png" alt="QR code">
+            
+            <h1> Improve your front-end skills by building projects</h1>
+                <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+
+        </div>
+    </main>
     
 </body>
 </html>
